compiler/tests/en/errors/dup_field.salam
// EXPECT: E027
struct P:
    pub x: int = 0
    pub x: int = 1
end

func main: end
